removed deprecated code + unused code